--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -487,6 +487,42 @@
 		}
 	}	
 
+	/* Previous Campaigns */
+
+	#block-hwc-homepage-previous-campaign-nav{
+		padding-bottom: 2em;
+	}
+
+	.accordion-menu{
+		max-width: 100%;
+		margin-bottom: 0.5em;
+		.menu-level-2{
+			ul{
+				li{
+					max-width: 265px;
+					float: left;
+					margin-right: 1em;
+				}
+			}
+		}
+	}
+
+	#block-hwc-campaign-resources{
+		.campaign-resources{
+			.campaign-resources-boxes{
+				div{
+					width: 49%;
+				}
+				a{
+					span{
+						width: auto;
+						padding-right: 15px;
+					}
+				}
+			}
+		}
+	}
+
 	/*Footer*/
 	.footer-section{
 		display: none;
@@ -821,20 +857,6 @@
 
 	.node-type-events .group-right2 .add-to-calendar {
     	float: none;
-	}
-
-}
-
-
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) { 
-	#block-hwc-campaign-resources .campaign-resources .campaign-resources-boxes div {
-	    display: flex;
-	    width: 67%;
-	    margin-bottom: 1em;
-	}
-
-	#block-hwc-campaign-resources .campaign-resources .campaign-resources-boxes a span {
-    	width: 168px;
 	}
 
 }
