--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -86,6 +86,17 @@
 		font-size: 1.6em;
 	}
 
+	/* Related resources - right column */
+	.related-resources{
+		padding: 0;
+		.related-resources-boxes{
+			div{
+				margin-right: 0;
+				width: 310px;
+			}
+		}
+	}
+
 }
 
 @media (max-width: 348px) { 
