--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -15,33 +15,59 @@
     	padding-bottom: 1em;
 	}
 
-	.content-languages-download select.new-select-style{
-		width: 84% !important;
+	.content-languages-download{
+		select.new-select-style{
+			width: 84% !important;
+		}
 	}
 
-	.content-order-copy img {
-	    float: none;
-	    margin-left: 0;
-	    margin-top: 1em;
+	.content-order-copy{
+		img {
+		    float: none;
+		    margin-left: 0;
+		    margin-top: 1em;
+		}
 	}
 
-	.page-events #block-osha-newsletter-osha-newsletter-events-subscribe{
-		display: none;
+	.page-events{
+		#block-osha-newsletter-osha-newsletter-events-subscribe{
+			display: none;
+		}
 	}
 
 	body.press-room .box-before.news.two-column, body.european-week .box-before.news.two-column, body.press-room .box-before.events, body.european-week .box-before.events{
 		width: 100%;
 	}
 
-	.page-tools-and-publications #edit-left-column .content-filters{
-		margin-top: 0;
+	.page-tools-and-publications{
+		#edit-left-column{
+			.content-filters{
+				margin-top: 0;
+			}
+		}
 	}
 
-	.page-publications .pager-total, .page-tools-and-publications .pager-total{
-		top: -1em;
-    	right: 5em;
+	.page-publications, .page-tools-and-publications{
+		.pager-total{
+			top: -1em;
+    		right: 5em;
+    	}
 	}
 
+	#block-hwc-campaign-resources{
+		.campaign-resources{
+			.campaign-resources-boxes{
+				div{
+					width: 100%;
+				}
+				a{
+					span{
+						width: auto;
+					}
+				}
+			}
+		}
+	}
 
 }
 
