--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5809,3 +5809,24 @@ body.european-week{
 		border-radius: 0;
 	}
 }
+
+
+/* Napo Films */
+
+.page-node-160{
+	article{
+		h2{
+			margin-top: 15px;
+			padding-top: 100px;
+			margin-bottom: 40px;
+			font-style: normal;
+			background: url(/sites/all/themes/hwc_frontend/images/content/icono-napo.png) no-repeat center 20px;
+			background-size: 61px;
+			text-align: center;
+			a{
+				color: #749b00;
+			}
+		}
+	}
+}
+
