--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -97,6 +97,19 @@
 		}
 	}
 
+	/* Napo Films */
+	.page-node-160{
+		#block-views-napo-film-carousel-slidehow{
+			#napo_films{
+				.napo_films{
+					.jssorb03{
+						bottom: -64px;
+					}
+				}
+			}
+		}	
+	}
+
 }
 
 @media (max-width: 348px) { 
