--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -101,11 +101,13 @@
 
 @media (max-width: 1391px) {
 
-	.page-search .view-footer {
-	    display: block;
-	    position: absolute;
-	    top: -37px;
-	    width: 100%;
+	.page-search{
+		.view-footer {
+		    display: block;
+		    position: absolute;
+		    top: -37px;
+		    width: 100%;
+		}
 	}
 
 }
@@ -123,34 +125,55 @@
 		width: 100%;
 	}
 
-	#block-views-splash-previous-campaigns-splash > div > div > div{
-		width: 49%;
-		float: left;
-		margin-right: 1%;
+	#block-views-splash-previous-campaigns-splash{
+		.view-content{
+			display: flex;
+			flex-wrap: wrap;
+			width: 100%;
+		}
+		> div > div > div{
+			width: 49%;
+			float: left;
+			margin-right: 1%;
+		}
+		.box-before-title.previous{
+			display: flex;
+	    	flex-wrap: wrap;
+		}
 	}
 
-	#block-views-splash-previous-campaigns-splash .box-before-title.previous{
-		display: flex;
-    	flex-wrap: wrap;
-	}
-
-	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
-		width: 90%;
-	}
-
-	.before-the-campaign .content-box-before div:nth-child(1) > div.box-before-title:nth-child(2){
-	    padding-top: 0.5em;
+	.before-the-campaign{
+		.content-box-before{
+			div:nth-child(1){
+				> div.box-before-title:nth-child(2){
+					width: 90%;
+				}
+				div.box-before-title:nth-child(2){
+					padding-top: 0.5em;
+				}
+			}
+		}
 	}
 
 }
 
 
 @media (max-width: 1280px) {
-	/* Events */
 
-	.page-events .region-content #block-system-main .view-events-search .view-content:nth-child(2) .views-row{
-		min-height: auto;
-		width: 100%;
+	/* Events */
+	.page-events{
+		.region-content{
+			#block-system-main{
+				.view-events-search{
+					.view-content:nth-child(2){
+						.views-row{
+							min-height: auto;
+							width: 100%;
+						}
+					}
+				}
+			}
+		}
 	}
 
 }
